--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
+  padding: 0;
   margin: 0;
+  position: relative;
+  background: url('/src/assets/pattern_bg.png');
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
